<resources>
    <string name="app_name">Overwatch AIM Trainig Results</string>
    <string name="character">Character</string>
    <string name="character_class">Character Class</string>
    <string name="time">time</string>
    <string name="kills">Kills</string>
    <string name="accr">Accr</string>
    <string name="add_description">Add Description</string>
    <string name="day">Day</string>
    <string name="diff">Diff</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
    <string name="percent">%</string>
    <string name="seconds">sec</string>
</resources>