<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context=".ItemListFragment">

        <TextView
            android:id="@+id/number_of_day"
            style="@style/Widget.Results.Header"
            android:layout_width="35dp"
            android:layout_marginStart="8dp"
            android:text="@string/day"
            app:layout_constraintEnd_toStartOf="@+id/difficulty"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/difficulty"
            style="@style/Widget.Results.Header"
            android:layout_width="62dp"
            android:layout_below="@+id/number_of_day"
            android:layout_marginStart="8dp"
            android:text="@string/diff"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/name"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/number_of_day"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/Widget.Results.Header"
            android:layout_width="103dp"
            android:layout_below="@+id/difficulty"
            android:layout_marginStart="8dp"
            android:text="@string/character"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/spent_time"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/difficulty"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/spent_time"
            style="@style/Widget.Results.Header"
            android:layout_width="45dp"
            android:layout_below="@+id/name"
            android:layout_marginStart="8dp"
            android:text="@string/time"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/kills"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/kills"
            style="@style/Widget.Results.Header"
            android:layout_width="50dp"
            android:layout_below="@+id/spent_time"
            android:layout_marginStart="8dp"
            android:text="@string/kills"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/accuracy"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/spent_time"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accuracy"
            style="@style/Widget.Results.Header"
            android:layout_width="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/accr"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/kills"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accuracy"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>
        
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/add_description"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>